(fix) fix student name overflow. split name into first and last delimited by first white space

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -109,6 +109,10 @@ a, a:visited, a:hover, a:active {
   word-wrap: break-word;
 }
 
+.studentLastName{
+  font-size: 18px;
+}
+
 .attendanceButton{
   position: absolute;
   top: -10px;
